--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,20 @@
-<h1>New User</h1>
+
+<!-- app/views/users/new.html.erb -->
+
+<h1>Signup!</h1>
+
+<%= form_for :user, url: '/users' do |f| %>
+
+  Name: <%= f.text_field :name %>
+  Email: <%= f.text_field :email %>
+  Password: <%= f.password_field :password %>
+  Password Confirmation: <%= f.password_field :password_confirmation %>
+  <%= f.submit "Submit" %>
+
+<% end %>
+<!--<h1>New User</h1>
 
 <%= render 'form', user: @user %>
 
 <%= link_to 'Back', users_path %>
+-->
